--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -23,5 +23,6 @@ services:
     container_name: "simple-service"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.whoami.rule=Host(`whoami.localhost`)"
+#      - "traefik.http.routers.whoami.rule=Host(`whoami.localhost`)"
+      - "traefik.http.routers.whoami.rule=Host(`whoami.ec2-13-38-30-207.eu-west-3.compute.amazonaws.com`)"
       - "traefik.http.routers.whoami.entrypoints=web"
