--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -6,22 +6,18 @@ services:
   traefik:
     image: "traefik:latest"
     container_name: "traefik"
-    command:
-      #- "--log.level=DEBUG"
-      - "--api.insecure=true"
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.web.address=:80"
     ports:
       - "80:80"
       - "8080:8080"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - ./traefik.yml:/etc/traefik/traefik.yml:ro
 
   whoami:
     image: "traefik/whoami"
     container_name: "simple-service"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.whoami.rule=Host(`whoami.localhost`)"
+      - "traefik.http.routers.whoami.rule=Host(`localhost`)"
+#      - "traefik.http.routers.whoami.rule=Host(`ec2-13-38-30-207.eu-west-3.compute.amazonaws.com`)"
       - "traefik.http.routers.whoami.entrypoints=web"
