--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -1,10 +1,51 @@
 api:
-  insecure: true
+  insecure: false
+  dashboard: true
+
+entryPoints:
+  http:
+    address: :80
+    http:
+      redirections:
+        entryPoint:
+          to: https
+  https:
+    address: :443
+    http:
+      tls:
+        certResolver: myresolver
+
+certificatesResolvers:
+  myresolver:
+    acme:
+      email: "test@example.com"
+      storage: "acme.json"
+      httpChallenge:
+        entryPoint: http
 
 providers:
   docker:
     exposedByDefault: false
+    endpoint: "unix:///var/run/docker.sock"
 
-entryPoints:
-    http:
-      address: :80
+log:
+  filePath: "/log/traefik.log"
+  format: json
+  level: DEBUG
+
+accessLog:
+  filePath: "/log/access.log"
+  format: json
+
+metrics:
+  prometheus:
+    buckets:
+      - 0.1
+      - 0.3
+      - 1.2
+      - 5.0
+    addEntryPointsLabels: true
+    addRoutersLabels: true
+    addServicesLabels: true
+    entryPoint: https
+    
