--- a/prometheus/docker-compose.yml
+++ b/prometheus/docker-compose.yml
@@ -1,24 +1,17 @@
-version: '3'
+---
+version: '3.9'
 
 services:
   prometheus:
     image: prom/prometheus
     ports:
       - 9000:9090
+    networks:
+      - default
     volumes:
       - ./prometheus:/etc/prometheus
       - prometheus-data:/prometheus
     command: --web.enable-lifecycle  --config.file=/etc/prometheus/prometheus.yml
-
-
-  grafana:
-    image: grafana/grafana
-    ports:
-      - 3000:3000
-    restart: unless-stopped
-    volumes:
-      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
-      - grafana-data:/var/lib/grafana
 
   alertmanager:
     image: prom/alertmanager
@@ -41,7 +34,8 @@ services:
 
 volumes:
   prometheus-data:
-
-  grafana-data:
-
   alertmanager-data:
+
+networks: 
+  default: 
+    name: external-example
