--- a/grafana/docker-compose.yml
+++ b/grafana/docker-compose.yml
@@ -1,54 +1,3 @@
-<<<<<<< HEAD
-version: '3'
-
-volumes:
-  grafana-pgdata:
-
-services:
-  # Grafana dedicated storage
-  #
-  grafana-storage:
-    image: postgres:10-alpine
-    networks:
-      - lan-traefik
-    volumes:
-      - grafana-pgdata:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_USER=admin
-      - POSTGRES_DB=grafana
-    healthcheck:
-      test: ["CMD", "pg_isready"]
-      interval: 30s
-      timeout: 1s
-      retries: 5
-
-        
-  # Grafana Server
-  #
-  grafana:
-    image: grafana/grafana
-#    ports:
-#      - "3000:3000"
-    networks:
-      - lan-traefik
-    environment:
-      - GF_DATABASE_TYPE=postgres
-      - GF_DATABASE_HOST=grafana-storage
-      - GF_DATABASE_NAME=grafana
-      - GF_DATABASE_USER=admin
-      - GF_DATABASE_PASSWORD=password
-    deploy: 
-      labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.grafana.rule=Host(`grafana-gr3.cefim-formation.org`)"
-      - "traefik.http.routers.grafana.entrypoints=https"
-      - "traefik.http.services.grafana.loadbalancer.server.port=3000"
-
-networks:
-  lan-traefik:
-    name: lan-traefik
-=======
 ---
 version: '3.9'
 
@@ -69,5 +18,4 @@ volumes:
 
 networks: 
   default: 
-    name: external-example
->>>>>>> 7-mise-en-place-prometheus
+    name: lan-grafana
