--- a/loki/docker-compose.yaml
+++ b/loki/docker-compose.yaml
@@ -3,9 +3,9 @@ version: "3.9"
 
 networks:
   loki:
-  default: 
-    name: lan-grafana
-    
+  proxy:
+    name: traefik
+
 services:
   read:
     image: grafana/loki
@@ -132,7 +132,13 @@ services:
       - "3100:3100"
     networks:
       - loki
-      - default
+      - proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.gateway.tls=true"
+      - "traefik.http.routers.gateway.tls.certresolver=encrypt-resolver"
+      - "traefik.http.routers.gateway.rule=Host(`loki-gr3.cefim-formation.org`)"
+      - "traefik.http.routers.gateway.entrypoints=websecure"
 
   flog:
     image: mingrammer/flog
