--- a/harbor/docker-compose.yml
+++ b/harbor/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       - _REDIS_URL_REG=redis://redis:6379/1
       - PORT=8080
       - LOG_LEVEL=info
-      - EXT_ENDPOINT=http://reg.mydomain.com
+      - EXT_ENDPOINT=https://harbor-gr3.cefim-formation.org
       - DATABASE_TYPE=postgresql
       - REGISTRY_CONTROLLER_URL=http://registryctl:8080
       - POSTGRESQL_HOST=postgresql
