--- a/harbor/docker-compose.yml
+++ b/harbor/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   registry:
     image: docker.io/bitnami/harbor-registry:2
     networks:
-      - proxy
+      - harbornet
     environment:
       - REGISTRY_HTTP_SECRET=CHANGEME
     volumes:
@@ -14,7 +14,7 @@ services:
   registryctl:
     image: docker.io/bitnami/harbor-registryctl:2
     networks:
-      - proxy
+      - harbornet
     environment:
       - CORE_SECRET=CHANGEME
       - JOBSERVICE_SECRET=CHANGEME
@@ -27,7 +27,7 @@ services:
     image: docker.io/bitnami/postgresql:13
     container_name: harbor-db
     networks:
-      - proxy
+      - harbornet
     environment:
       - POSTGRESQL_PASSWORD=bitnami
       - POSTGRESQL_DATABASE=registry
@@ -37,7 +37,7 @@ services:
     image: docker.io/bitnami/harbor-core:2
     container_name: harbor-core
     networks:
-      - proxy
+      - harbornet
     depends_on:
       - registry
       - chartmuseum
@@ -82,14 +82,14 @@ services:
     image: docker.io/bitnami/harbor-portal:2
     container_name: harbor-portal
     networks:
-      - proxy
+      - harbornet
     depends_on:
       - core
   jobservice:
     image: docker.io/bitnami/harbor-jobservice:2
     container_name: harbor-jobservice
     networks:
-      - proxy
+      - harbornet
     depends_on:
       - redis
       - core
@@ -106,7 +106,7 @@ services:
   redis:
     image: docker.io/bitnami/redis:latest
     networks:
-      - proxy
+      - harbornet
     environment:
       # ALLOW_EMPTY_PASSWORD is recommended only for development.
       - ALLOW_EMPTY_PASSWORD=yes
@@ -119,6 +119,7 @@ services:
 #      - '80:8080'
     networks:
       - proxy
+      - harbornet
     depends_on:
       - postgresql
       - registry
@@ -126,8 +127,7 @@ services:
       - portal
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.harbor-nginx.tls=true"
-      - "traefik.http.routers.harbor-nginx.tls.certresolver=encrypt-resolver"
+      - "traefik.docker.network=traefik"
       - "traefik.http.routers.harbor-nginx.rule=Host(`harbor-gr3.cefim-formation.org`)"
       - "traefik.http.routers.harbor-nginx.entrypoints=websecure"
 
@@ -135,7 +135,7 @@ services:
     container_name: chartmuseum
     image: docker.io/bitnami/chartmuseum:0
     networks:
-      - proxy
+      - harbornet
     environment:
       - CACHE=redis
       - CACHE_REDIS_ADDR=redis:6379
@@ -148,6 +148,7 @@ services:
       - INDEX_LIMIT=0
     volumes:
       - chartmuseum_data:/bitnami/data
+
 volumes:
   registry_data:
     driver: local
@@ -161,5 +162,6 @@ volumes:
     driver: local
 
 networks:
+  harbornet:
   proxy:
     name: traefik
