--- a/harbor/docker-compose.yml
+++ b/harbor/docker-compose.yml
@@ -115,10 +115,8 @@ services:
     container_name: nginx
     volumes:
       - ./config/proxy/nginx.conf:/opt/bitnami/nginx/conf/nginx.conf:ro
-#    ports:
-#      - '80:8080'
     networks:
-      - proxy
+      - traefik
       - harbornet
     depends_on:
       - postgresql
@@ -163,5 +161,6 @@ volumes:
 
 networks:
   harbornet:
-  proxy:
-    name: traefik
+    internal: true
+  traefik:
+    external: true
