--- a/grafana/docker-compose.yml
+++ b/grafana/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       - grafana-data:/var/lib/grafana
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.grafana.rule=Host(`grafana-gr3.cefim-formation.org`)"
-      - "traefik.http.routers.grafana.entrypoints=websecure"
+      - "traefik.http.routers.${SERVICE}.rule=Host(`${DOMAIN}`)"
+      - "traefik.http.routers.${SERVICE}.entrypoints=websecure"
 
 volumes:
   grafana-data:
