--- a/sonarqube/docker-compose.yml
+++ b/sonarqube/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 
 services:
   sonarqube:
-    image: sonarqube
+    image: "${SERVICE}:latest"
     networks:
       - traefik
       - sonarnet
@@ -12,17 +12,18 @@ services:
       - "extensions:/opt/sonarqube/extensions"
       - "logs:/opt/sonarqube/logs"
       - "data:/opt/sonarqube/data"
+    restart: unless-stopped
     depends_on:
       - postgres
     environment:
-      - sonar.jdbc.username=sonar
-      - sonar.jdbc.password=sonar
+      - sonar.jdbc.username=$DB_USER
+      - sonar.jdbc.password=$DB_PASSWORD
       - sonar.jdbc.url=jdbc:postgresql://postgres/sonarqube
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=traefik"
-      - "traefik.http.routers.sonarqube.rule=Host(`sonarqube-gr3.cefim-formation.org`)"
-      - "traefik.http.routers.sonarqube.entrypoints=websecure"
+      - "traefik.http.routers.${SERVICE}.rule=Host(`${DOMAIN}`)"
+      - "traefik.http.routers.${SERVICE}.entrypoints=websecure"
 
   postgres:
     image: postgres
@@ -31,8 +32,8 @@ services:
     networks:
       - sonarnet
     environment:
-      POSTGRES_USER: sonar
-      POSTGRES_PASSWORD: sonar
+      POSTGRES_USER: $DB_USER
+      POSTGRES_PASSWORD: $DB_PASSWORD
       POSTGRES_DB: sonarqube
       PGDATA: pg_data:/var/lib/postgresql/data/pgdata
 
