--- a/grafana/datasources/loki_ds.yml
+++ b/grafana/datasources/loki_ds.yml
@@ -2,7 +2,7 @@ datasources:
   - name: Loki
     access: proxy
     type: loki
-    url: https://loki-gr3.cefim-formation.org
+    url: http://loki:3100
     jsonData:
       httpHeaderName1: "X-Scope-OrgID"
     secureJsonData:
