--- a/harbor/docker-compose.yml
+++ b/harbor/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       - _REDIS_URL_REG=redis://redis:6379/1
       - PORT=8080
       - LOG_LEVEL=info
-      - EXT_ENDPOINT=https://harbor-gr3.cefim-formation.org
+      - EXT_ENDPOINT=${DOMAIN}
       - DATABASE_TYPE=postgresql
       - REGISTRY_CONTROLLER_URL=http://registryctl:8080
       - POSTGRESQL_HOST=postgresql
@@ -70,8 +70,8 @@ services:
       - CORE_URL=http://core:8080
       - JOBSERVICE_URL=http://jobservice:8080
       - REGISTRY_STORAGE_PROVIDER_NAME=filesystem
-      - REGISTRY_CREDENTIAL_USERNAME=harbor_registry_user
-      - REGISTRY_CREDENTIAL_PASSWORD=harbor_registry_password
+      - REGISTRY_CREDENTIAL_USERNAME=$REGISTRY_USERNAME
+      - REGISTRY_CREDENTIAL_PASSWORD=$REGISTRY_PASSWORD
       - READ_ONLY=false
       - RELOAD_KEY=
     volumes:
@@ -98,8 +98,8 @@ services:
       - JOBSERVICE_SECRET=$HARBOR_PASSWORD
       - CORE_URL=http://core:8080
       - REGISTRY_CONTROLLER_URL=http://registryctl:8080
-      - REGISTRY_CREDENTIAL_USERNAME=harbor_registry_user
-      - REGISTRY_CREDENTIAL_PASSWORD=harbor_registry_password
+      - REGISTRY_CREDENTIAL_USERNAME=$REGISTRY_USERNAME
+      - REGISTRY_CREDENTIAL_PASSWORD=$REGISTRY_PASSWORD
     volumes:
       - jobservice_data:/var/log/jobs
       - ./config/jobservice/config.yml:/etc/jobservice/config.yml:ro
