--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "443:443"
     restart: unless-stopped
     networks:
-      - traefik
+      - traefik-net
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - ./traefik.yml:/etc/traefik/traefik.yml:ro
@@ -23,7 +23,7 @@ services:
       - ./data/acme.json:/acme.json
     labels:
       - "traefik.enable=true"
-      - "traefik.docker.network=traefik"
+      - "traefik.docker.network=traefik-net"
       - "traefik.http.routers.${SERVICE}.rule=Host(`${DOMAIN}`)"
       - "traefik.http.routers.${SERVICE}.entrypoints=websecure"
       - "traefik.http.routers.${SERVICE}.service=api@internal"
@@ -31,5 +31,5 @@ services:
       - "traefik.http.middlewares.auth.basicauth.usersfile=/etc/traefik/.passwd"
 
 networks:
-  traefik:
+  traefik-net:
     external: true
