--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,8 @@ grafana-deploy-job:
   script:
     - echo "$CONFIG_SSH"
     - ssh $DEPLOY_HOST "mkdir -p ~/${CI_PROJECT_NAME}_deploy/grafana/"
-    - scp ./grafana/docker-compose.yml $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/grafana/
+#    - scp ./grafana/docker-compose.yml $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/grafana/
+#    - scp ./grafana/.env $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/grafana/
+    - scp ./grafana/* $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/grafana/
     - ssh $DEPLOY_HOST "echo ${CI_REGISTRY_PASSWORD} | sudo docker login -u ${CI_REGISTRY_USER} --password-stdin ${CI_REGISTRY}"
     - ssh $DEPLOY_HOST "cd ~/${CI_PROJECT_NAME}_deploy/grafana/ && sudo docker compose pull && sudo docker compose up -d"
