--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,3 +29,16 @@ loki-deploy-job:
     - scp ~/.env $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/loki/
     - ssh $DEPLOY_HOST "echo ${CI_REGISTRY_PASSWORD} | sudo docker login -u ${CI_REGISTRY_USER} --password-stdin ${CI_REGISTRY}"
     - ssh $DEPLOY_HOST "cd ~/${CI_PROJECT_NAME}_deploy/loki/ && sudo docker compose pull && sudo docker compose up -d"
+
+prometheus-deploy-job:
+  stage: deploy
+  variables:
+    DEPLOY_HOST: "Docker_gr3"
+  script:
+    - echo "$CONFIG_SSH"
+    - ssh $DEPLOY_HOST "mkdir -p ~/${CI_PROJECT_NAME}_deploy/prometheus/"
+    - scp -r ./prometheus/* $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/prometheus/
+    - echo "$PROMETHEUS_ENV" > ~/.env
+    - scp ~/.env $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/prometheus/
+    - ssh $DEPLOY_HOST "echo ${CI_REGISTRY_PASSWORD} | sudo docker login -u ${CI_REGISTRY_USER} --password-stdin ${CI_REGISTRY}"
+    - ssh $DEPLOY_HOST "cd ~/${CI_PROJECT_NAME}_deploy/prometheus/ && sudo docker compose pull && sudo docker compose up -d"
