--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,5 +79,13 @@ traefik-deploy-job:
     - scp -r ./traefik/* $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/traefik/
     - echo "$TRAEFIK_ENV" > ~/.env
     - scp ~/.env $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/traefik/
+
+    - echo "$PASSWD" > ~/data/.passwd
+    - scp ~/data/.passwd $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/traefik/
+
+    - echo "$ACME_JSON" > ~/data/acme.json
+    - chmod 600 ~/data/acme.json
+    - scp ~/data/acme.json $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/traefik/
+
     - ssh $DEPLOY_HOST "echo ${CI_REGISTRY_PASSWORD} | sudo docker login -u ${CI_REGISTRY_USER} --password-stdin ${CI_REGISTRY}"
     - ssh $DEPLOY_HOST "cd ~/${CI_PROJECT_NAME}_deploy/traefik/ && sudo docker compose pull && sudo docker compose up -d"
