--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,11 +82,11 @@ traefik-deploy-job:
     - scp ~/.env $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/traefik/
 
     - echo "$PASSWD" > ~/.passwd
-    - scp ~/.passwd $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/traefik/data/
+    - scp ~/.passwd $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/traefik/data/.passwd
 
     - echo "$ACME_JSON" > ~/acme.json
     - chmod 600 ~/acme.json
-    - scp ~/acme.json $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/traefik/data/
+    - scp ~/acme.json $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/traefik/data/acme.json
 
     - ssh $DEPLOY_HOST "echo ${CI_REGISTRY_PASSWORD} | sudo docker login -u ${CI_REGISTRY_USER} --password-stdin ${CI_REGISTRY}"
     - ssh $DEPLOY_HOST "cd ~/${CI_PROJECT_NAME}_deploy/traefik/ && sudo docker compose pull && sudo docker compose up -d"
