--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ grafana-deploy-job:
     - scp ~/.env $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/grafana/
     - ssh $DEPLOY_HOST "echo ${CI_REGISTRY_PASSWORD} | sudo docker login -u ${CI_REGISTRY_USER} --password-stdin ${CI_REGISTRY}"
     - ssh $DEPLOY_HOST "cd ~/${CI_PROJECT_NAME}_deploy/grafana/ && sudo docker compose pull && sudo docker compose up -d"
+  when: manual
 
 loki-deploy-job:
   stage: deploy
@@ -29,6 +30,7 @@ loki-deploy-job:
     - scp ~/.env $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/loki/
     - ssh $DEPLOY_HOST "echo ${CI_REGISTRY_PASSWORD} | sudo docker login -u ${CI_REGISTRY_USER} --password-stdin ${CI_REGISTRY}"
     - ssh $DEPLOY_HOST "cd ~/${CI_PROJECT_NAME}_deploy/loki/ && sudo docker compose pull && sudo docker compose up -d"
+  when: manual
 
 prometheus-deploy-job:
   stage: deploy
@@ -42,6 +44,7 @@ prometheus-deploy-job:
     - scp ~/.env $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/prometheus/
     - ssh $DEPLOY_HOST "echo ${CI_REGISTRY_PASSWORD} | sudo docker login -u ${CI_REGISTRY_USER} --password-stdin ${CI_REGISTRY}"
     - ssh $DEPLOY_HOST "cd ~/${CI_PROJECT_NAME}_deploy/prometheus/ && sudo docker compose pull && sudo docker compose up -d"
+  when: manual
 
 sonarqube-deploy-job:
   stage: deploy
@@ -55,6 +58,7 @@ sonarqube-deploy-job:
     - scp ~/.env $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/sonarqube/
     - ssh $DEPLOY_HOST "echo ${CI_REGISTRY_PASSWORD} | sudo docker login -u ${CI_REGISTRY_USER} --password-stdin ${CI_REGISTRY}"
     - ssh $DEPLOY_HOST "cd ~/${CI_PROJECT_NAME}_deploy/sonarqube/ && sudo docker compose pull && sudo docker compose up -d"
+  when: manual
 
 harbor-deploy-job:
   stage: deploy
@@ -68,6 +72,7 @@ harbor-deploy-job:
     - scp ~/.env $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/harbor/
     - ssh $DEPLOY_HOST "echo ${CI_REGISTRY_PASSWORD} | sudo docker login -u ${CI_REGISTRY_USER} --password-stdin ${CI_REGISTRY}"
     - ssh $DEPLOY_HOST "cd ~/${CI_PROJECT_NAME}_deploy/harbor/ && sudo docker compose pull && sudo docker compose up -d"
+  when: manual
 
 traefik-deploy-job:
   stage: deploy
@@ -90,3 +95,4 @@ traefik-deploy-job:
 
     - ssh $DEPLOY_HOST "echo ${CI_REGISTRY_PASSWORD} | sudo docker login -u ${CI_REGISTRY_USER} --password-stdin ${CI_REGISTRY}"
     - ssh $DEPLOY_HOST "cd ~/${CI_PROJECT_NAME}_deploy/traefik/ && sudo docker compose pull && sudo docker compose up -d"
+  when: manual
